# win-shellcode-rs

./: .gitignore  Cargo.toml  Makefile.toml  README.md
example-shellcode/: Cargo.toml
example-shellcode/src/: binding.rs  main.rs
shellcode/: Cargo.toml
shellcode/src/: main.rs
src/: main.rs
