[package]
name = "shellcode"
version = "0.1.0"
authors = ["uru <mail@nyaa.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
opt-level = "z"
lto = true

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

[dependencies]
